stylesheet.css
body {
    background: var(--primary-background-color);
    color: #000000;
    font-family: 'Poppins', sans-serif;
    letter-spacing: 0.5px;
    line-height: 1.8;
    font-size: 62.5%;
    text-rendering: optimizeSpeed;
    overflow-x: hidden;
    margin: 0;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    height: 100%;
}

:root {
    --primary-background-color: #363732;

    --primary-h1-color: #dce1e9;
    --primary-h2-color: #dce1e9;

    --primary-p-color: #dce1e9;
    --secondary-p-color: #cdd3db;
    --prose-p-color: #783F8E;

    --primary-a-color: #e0c1e0;
    --primary-a-hover-color: #d07ee0;

    --menu_box-color: #363732;
    --blog_box-color: #999AC6;

    --border-radius: 5px;
}

* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

/* KYLE NAME RAINBOW */
a.kyle {
    font-size: calc(0.7rem + .4vw);
    color: var(--primary-p-color);
    padding: 0rem;

    position: relative;
    z-index: 54;
    transition: color 0.3s ease-in, opacity 0.3s ease-in;
    text-decoration: none;
}

a.kyle::before {
    content: attr(data-text);
    position: fixed;
    z-index: 55;
    background-image: linear-gradient(100deg, red, orange, yellow, green, blue, indigo, violet);
    color: transparent; 
    -webkit-background-clip: text;
    background-clip: text;
    opacity: 0;
    transition: opacity 0.2s ease-in;
    pointer-events: none;
}

a.kyle:hover::before {
    opacity: 0.9;
    filter: blur(1px);
    transition: all 0.2s;
}

a.kyle:hover {
    color: transparent;
}

/* TEXT BOX EXPLODEY */
.explosion-container {
    position: relative;
    display: inline-block;
    margin-bottom: .5rem;
}

.pixel {
    position: absolute;
    width: 5px;
    height: 5px;
    background-color: #000;
    opacity: 0;
    transition: all 0.5s;
    background-color: #ff44009c;
}

.emailInput {
    background-color: var(--primary-p-color);
    padding: .1rem;
}

.submit_button {
    background-color:#858282;
    border-radius: 5px;
    font-size: 0.7rem;
    padding: .1rem;
    font-family: 'Poppins', sans-serif;;
}

.date_footer {
    padding: .2rem;
    font-size: 0.75rem;
}

/* WIGGLE WIGGLE */
@keyframes jello {
from, 11.1%, to {
    transform: translate3d(0, 0, 0);
}
22.2% {
    transform: skewX(-13.5deg) skewY(-12.5deg);
}
33.3% {
    transform: skewX(6.25deg) skewY(7.25deg);
}
44.4% {
    transform: skewX(-4.125deg) skewY(-3.125deg);
}
55.5% {
    transform: skewX(1.5625deg) skewY(2.5625deg);
}
66.6% {
    transform: skewX(-0.78125deg) skewY(-0.78125deg);
}
77.7% {
    transform: skewX(1.390625deg) skewY(0.390625deg);
}
88.8% {
    transform: skewX(-0.1953125deg) skewY(-1.1953125deg);
}
}

.menu_item span {
display: inline-block;
transition: transform 0.5s;
}

.menu_item span:hover {
animation: jello 0.6s ease-in-out;
}

button.menu_item {
    float: right;
    top: 0;
    line-height: .5;
    background-color: var(--primary-background-color);
    border: none;
    text-align: center;
    text-decoration: none;

    font-size: calc(0.6rem + .4vw);
    font-family: Poppins;
    color: var(--primary-a-color);
    padding: .5rem;
    position: relative;
}
/* WIGGLE WIGGLE */

.menu {
    display: flex;
    position: fixed;
    width: 15%;
    padding: 20px;
    margin-top: 20vh;
    margin-left: 15%;
    background-color: var(--menu_box-color);
    /* box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.2); */
}

.blog {
    width: 60%;
    margin-top: 20vh;
    margin-left: auto;
    margin-right: 6vw;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--primary-background-color);
}

.post {
    width: 90%;
    background-color: var(--blog_box-color);
    margin-bottom: 75px;
    margin-right: 0;
    border-radius: var(--border-radius);
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
}

.post_card {
    margin: auto;
    padding: 25px;
    align-items: center;
    display: flex;

    flex-direction: column; 
}

.photo_haiku {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 100%

}

.photo {
    width: fit-content;

}

img.kyle_photo {
    width: 90%;
    max-width: 750px;
    max-height: 700px;
    display: block;
    line-height: 0;
}

figure {
    position: relative;
    margin: 0;
    margin-left: auto;
    margin-right: auto;
}

figcaption {
    position: absolute;
    width: fit-content;
    bottom: 10px;
    left: 0;
    padding: 0.4rem;
    background-color: rgba(255, 255, 255, 0.5);
    color: #333;
    font-size: calc(0.5rem + .2vw);
}

.haiku {
    margin-left: 2%;
    margin-right: 2%;
    max-width: 100%;
    align-items: center;
    text-align: center;
    
}

p.haiku_paragraph {
    font-size: calc(0.6rem + .55vw);
    color: var(--prose-p-color);
    padding: calc(0.5rem + .3vw);
    padding-top: 1rem;
    position: relative;
    line-height: 1.2;
}

/* .prose {
    width: 90%;
    text-align: center;
}

p.prose_paragraph {
    font-size: calc(0.5rem + .3vw);
    color: var(--prose-p-color);
    padding: 1rem;
    position: relative;
    line-height: 1.1;
} */

/* Rounded border */
hr.line {
    border-top: 1px solid #000000;
    border-radius: 3px;
    margin-top: 15px;
    margin-left: auto;
    margin-right: auto;
    width: 100px;
}

.song_of_day {
    line-height: .5;
    align-items: end;
    text-align: center;
    padding: 1rem;
    position: relative;
}

span.song_header {
    font-size: calc(0.4rem + .5vw);
    color: var(--secondary-p-color);
    padding: 1rem;
    position: relative;
    line-height: .9;
    text-align: center;
}

p.song_paragraph {
    font-size: calc(0.5rem + .3vw);
    color: black;
    padding: 1.5rem;
    position: relative;
    line-height: 1;
}

a.song_title {
    font-size: calc(0.6rem + .4vw);
    color: var(--primary-a-color);
    line-height: 1;
    font-style: italic;
}

span.song_artist {
    font-size: calc(0.6rem + .4vw);
    color: var(--primary-a-color);
    line-height: 1;
}

span.footer {
    font-size: calc(0.2rem + .4vw);
    color: var(--primary-a-color);
    padding: 1rem;
    display: flex; 
    justify-content: center
}

h1 {
    font-size: calc(1rem + .7vw);
    color: var(--primary-h1-color);
    padding: 1rem;
    text-align: start;
}

h2 {
    font-size: calc(0.4rem + .6vw);
    color: var(--primary-h2-color);
    padding: 1rem;
    filter: blur(0.3px);
}

p {
    font-size: calc(0.7rem + .4vw);
    color: var(--primary-p-color);
    padding: 1rem;
    position: relative;
}

a {
    font-size: calc(0.6rem + .4vw);
    color: var(--primary-a-color);
    padding: .5rem;
    position: relative;
}

a:hover {
    color: var(--primary-a-hover-color);
    opacity: 95%;
    transition: 250ms ease-out;
}

@media(max-width: 900px) {

body {
    background: var(--primary-background-color);
    color: #000000;
    font-family: 'Poppins', sans-serif;
    letter-spacing: 0.5px;
    line-height: 1.8;
    font-size: 62.5%;
    text-rendering: optimizeSpeed;
    overflow-x: hidden;
    margin: 0;
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    height: 100%;
}

.menu {
    display: flex;
    background-color: #161719;
    filter: drop-shadow(4px 4px 5px rgba(0, 0, 0, 0.363));
    position: fixed;
    opacity: 95%;
    width: 100%;
    height: 4rem;
    border-radius: 1px 1px 10px 10px;
    z-index: 1000;
    transition: transform 200ms ease-out;
    text-wrap: balance;
    background-color: var(--menu_box-color);
    margin-left: auto;
    margin-right: auto;
    margin-top: -10px;
    padding: 2px;
}

.menu_item {
    float: right;
    top: 0;
    line-height: .5;
    display: flex;
    background-color: #161719;
    filter: drop-shadow(4px 4px 5px rgba(0, 0, 0, 0.363));
    position: fixed;
    opacity: 95%;
    width: 100%;
    height: 4rem;
    border-radius: 1px 1px 10px 10px;
    z-index: 1000;
    transition: transform 200ms ease-out;
    text-wrap: balance;
    background-color: var(--menu_box-color);
    margin-left: auto;
    margin-right: auto;
    margin-top: -10px;
    padding: 2px;
}

br.menu_breaks {
    display: none;
}

.blog {
    width: 90%;
    margin-top: 10vh;
    margin-left: auto;
    margin-right: auto;
    display: flex;
    flex-direction: column;
    align-items: flex-start;
    background-color: var(--primary-background-color);
    z-index: 5;
}

.post {
    width: 100%;
    background-color: var(--blog_box-color);
    margin-bottom: 75px;
    margin-right: auto;
    margin-left: auto;
    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);

    border-radius: calc(var(--radius) - 25px);
}

.post_card {
    margin: auto;
    padding: 10px;
    align-items: center;
    display: flex;

    flex-direction: column; 
}

.photo_haiku {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 100%
}

.photo {
    width: fit-content;
}

img.kyle_photo {
    width: 100%;
    max-width: 350px;
    max-height: 300px;
    height: auto;
}

figure {
    position: relative;
    margin: 0;
}

figcaption {
    position: absolute;
    bottom: 5px;
    left: 0;
    padding: 0.2rem;
    background-color: rgba(255, 255, 255, 0.5);
    color: #333;
    font-size: calc(0.3rem + .5vw);
}

.haiku {
    margin-left: 5%;
    margin-right: 5%;
    max-width: 100%;
    align-items: center;
    text-align: center;
    
}

p.haiku_paragraph {
    font-size: calc(0.5rem + .5vw);
    color: var(--prose-p-color);
    padding: .5rem;
    padding-top: 1rem;
    position: relative;
    line-height: 1;
}


/* Rounded border */
hr.line {
    border-top: 1px solid #000000;
    border-radius: 3px;
    margin-top: 15px;
    margin-left: auto;
    margin-right: auto;
    width: 100px;
}

.song_of_day {
    line-height: .5;
    align-items: end;
    text-align: center;
    padding: 1rem;
    position: relative;
}

span.song_header {
    font-size: calc(0.4rem + .2vw);
    color: var(--secondary-p-color);
    padding: 1rem;
    position: relative;
    line-height: 1;
    text-align: center;
    white-space: nowrap;
}

p.song_paragraph {
    font-size: calc(0.4rem + .1vw);
    color: black;
    padding: .75rem;
    position: relative;
    line-height: 1;
}

a.song_title {
    font-size: calc(0.5rem + .1vw);
    color: var(--primary-a-color);
    line-height: 1;
    font-style: italic;
    white-space: nowrap;
}

span.song_artist {
    font-size: calc(0.5rem + .1vw);
    color: var(--primary-a-color);
    line-height: 1;
    white-space: nowrap;
}

h1 {
    font-size: calc(1rem + .2vw);
    color: var(--primary-h1-color);
    padding: 1rem;
    text-align: start;
}

h2 {
    font-size: calc(0.4rem + .2vw);
    color: var(--primary-h2-color);
    padding: 1rem;
    filter: blur(0.3px);
}

p {
    font-size: calc(0.7rem + .2vw);
    color: var(--primary-p-color);
    padding: 1rem;
    position: relative;
}

a {
    font-size: calc(0.5rem + .1vw);
    color: var(--primary-a-color);
    padding: .5rem;
    position: relative;
}

a:hover {
    color: var(--primary-a-hover-color);
    opacity: 95%;
    transition: 250ms ease-out;
}

}

